--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>https://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -15,9 +16,11 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
   <build>
     <pluginManagement>
       <plugins>
@@ -72,4 +75,22 @@
       </plugin>
     </plugins>
   </build>
+
+  <!-- Distribution Management for Artifactory -->
+  <distributionManagement>
+    <repository>
+      <id>artifactory</id>
+      <url>https://trialxmr2hr.jfrog.io/artifactory/maven-local</url>
+    </repository>
+  </distributionManagement>
+
+  <!-- Servers Configuration for Artifactory Credentials -->
+  <servers>
+    <server>
+      <id>artifactory</id>
+      <username>Azharuddin.Maruf@Opustechglobal.com</username>
+      <password>Azhar@123</password>
+    </server>
+  </servers>
 </project>
+
